# smart-home-dashboard-slint

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: main.cpp  smarthome.cpp  smarthome.h
ui/: assets.slint  main_window.slint  theme.slint  widgets.slint
